--- a/index.html
+++ b/index.html
@@ -67,30 +67,7 @@
 		</div>
   </div>
 
-	<p class="h6 fw-lighter text-white text-center main-heading position-absolute bottom-0 start-50 translate-middle-x"><!--?xml version="1.0" encoding="UTF-8" standalone="no"?-->
-
-	<svg class="viditkhandelwal svg-elem "width="100%" height="100%" viewBox="0 0 3083 193" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-    <g transform="matrix(1,0,0,1,-248.516,-904.443)">
-        <g>
-            <path d="M295.516,906.943L251.016,906.943L339.016,1094.44L383.516,1094.44L471.016,906.943L427.266,906.943L361.766,1054.44L295.516,906.943Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-1"></path>
-            <rect x="493.516" y="906.943" width="40" height="187.5" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-2"></rect>
-            <path d="M568.516,1094.44L662.016,1094.44C722.266,1094.44 762.266,1056.94 762.266,1000.69C762.266,944.443 722.266,906.943 662.016,906.943L568.516,906.943L568.516,1094.44ZM608.516,1061.94L608.516,939.443L661.016,939.443C698.516,939.443 722.266,964.193 722.266,1001.69C722.266,1038.69 699.016,1061.94 661.016,1061.94L608.516,1061.94Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-3"></path>
-            <rect x="791.016" y="906.943" width="40" height="187.5" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-4"></rect>
-            <path d="M858.516,939.443L932.266,939.443L932.266,1094.44L972.266,1094.44L972.266,939.443L1046.02,939.443L1046.02,906.943L858.516,906.943L858.516,939.443Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-5"></path>
-            <path d="M1134.77,1094.44L1174.77,1094.44L1174.77,1026.69L1199.77,1009.19L1279.52,1094.44L1331.52,1094.44L1228.27,986.693L1329.02,906.943L1276.77,906.943L1174.77,985.693L1174.77,906.943L1134.77,906.943L1134.77,1094.44Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-6"></path>
-            <path d="M1354.02,1094.44L1394.02,1094.44L1394.02,1016.19L1512.02,1016.19L1512.02,1094.44L1552.02,1094.44L1552.02,906.943L1512.02,906.943L1512.02,983.693L1394.02,983.693L1394.02,906.943L1354.02,906.943L1354.02,1094.44Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-7"></path>
-            <path d="M1617.02,1094.44L1638.52,1049.44L1741.52,1049.44L1763.02,1094.44L1807.52,1094.44L1710.77,906.943L1669.27,906.943L1573.27,1094.44L1617.02,1094.44ZM1653.52,1018.19L1690.02,941.693L1726.52,1018.19L1653.52,1018.19Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-8"></path>
-            <path d="M1829.02,1094.44L1869.02,1094.44L1869.02,957.943L1992.02,1094.44L2032.02,1094.44L2032.02,906.943L1992.02,906.943L1992.02,1043.44L1869.02,906.943L1829.02,906.943L1829.02,1094.44Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-9"></path>
-            <path d="M2067.02,1094.44L2160.52,1094.44C2220.77,1094.44 2260.77,1056.94 2260.77,1000.69C2260.77,944.443 2220.77,906.943 2160.52,906.943L2067.02,906.943L2067.02,1094.44ZM2107.02,1061.94L2107.02,939.443L2159.52,939.443C2197.02,939.443 2220.77,964.193 2220.77,1001.69C2220.77,1038.69 2197.52,1061.94 2159.52,1061.94L2107.02,1061.94Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-10"></path>
-            <path d="M2289.52,1094.44L2460.27,1094.44L2460.27,1061.94L2329.52,1061.94L2329.52,1014.94L2444.77,1014.94L2444.77,983.443L2329.52,983.443L2329.52,939.443L2458.27,939.443L2458.27,906.943L2289.52,906.943L2289.52,1094.44Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-11"></path>
-            <path d="M2489.02,1094.44L2646.52,1094.44L2646.52,1061.94L2529.02,1061.94L2529.02,906.943L2489.02,906.943L2489.02,1094.44Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-12"></path>
-            <path d="M2632.02,906.943L2697.52,1094.44L2744.52,1094.44L2786.02,950.193L2828.27,1094.44L2876.27,1094.44L2942.02,906.943L2899.52,906.943L2854.02,1048.69L2810.27,906.943L2763.77,906.943L2720.27,1048.69L2675.27,906.943L2632.02,906.943Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-13"></path>
-            <path d="M2958.77,1094.44L2980.27,1049.44L3083.27,1049.44L3104.77,1094.44L3149.27,1094.44L3052.52,906.943L3011.02,906.943L2915.02,1094.44L2958.77,1094.44ZM2995.27,1018.19L3031.77,941.693L3068.27,1018.19L2995.27,1018.19Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-14"></path>
-            <path d="M3170.77,1094.44L3328.27,1094.44L3328.27,1061.94L3210.77,1061.94L3210.77,906.943L3170.77,906.943L3170.77,1094.44Z" style="fill: white; fill-rule: nonzero; stroke: white; stroke-width: 5px;" class="svg-elem-15"></path>
-        </g>
-    </g>
-</svg>
-</p>
+	<p class="h6 fw-lighter text-white text-center main-heading position-absolute bottom-0 start-50 translate-middle-x">VIDIT KHANDELWAL</p>
 
 		<footer class="footer">
       <div class="container">
@@ -105,7 +82,7 @@
 					<div class="offcanvas-body footer-text">
 						<p>
 							&copy; 2022 Vidit Khandelwal.<br><br>
-							Some links are in the form of "https://v-k.pw/XXXXX". v-k.pw is Vidit Khandelwal's URL shortening service. It does not collect any personal data.<br><br>
+							<a href="https://github.com/csvidit/cs-landing" class="link">Go to this project's repository</a><br><br>
 							For more information regarding websites owned and operated by Vidit Khandelwal, go to <a href="https://domains.viditkhandelwal.com" target="_blank" type="">domains.viditkhandelwal.com</a>
 						</p>
 					</div>
